# llm-nomic-api-embed

./: README.md  llm_nomic_api_embed.py  pyproject.toml
tests/: conftest.py  test_nomic_api_embed.py
tests/cassettes/test_nomic_api_embed/: test_embed.yaml  test_embed_combination.yaml  test_embed_vision.yaml
